# python-project-50

./: Makefile  README.md  file1.json  pyproject.toml
.github/workflows/: main.yml
gendiff/: __init__.py  cli.py  generate_diff.py
gendiff/scripts/: main.py
tests/: test_generate_diff.py
tests/test_data/: one.json  two.json
